--- a/web/css/main.css
+++ b/web/css/main.css
@@ -5646,11 +5646,29 @@ form .field-input:first-child{
 /*end Cтили toastMessage*/
 
 /*loader start*/
+.main-preload{
+    display: flex;
+    position: fixed;
+    background-color: rgba(52,56,67,0.4);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 400;
+    align-items: center;
+}
+
 #loader-box{
     width: 100%;
     text-align: center;
     position: relative;
     margin-top: calc((100% + 28px)/2);
+}
+
+#loader-box2{
+    width: 100%;
+    text-align: center;
+    position: relative;
 }
 
 #loader-box span{
