--- a/web/css/min-1190px.css
+++ b/web/css/min-1190px.css
@@ -146,6 +146,9 @@
     .card-block-discount:nth-child(2n){
         margin-right: 0px;
     }
+    .cards-block-discount.row-3 .card-block-discount:nth-child(3n) {
+        margin-right: 20px;
+    }
     .container-photo{
         width: calc((100% - 20px)/2 );
     }
