adding favorite division and many different fucking fixes

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3497,6 +3497,7 @@ a .btn-sort-reviews.active
     width: 260px;
     box-shadow: 0px 2px 0px 0px #cdced0;
     border-radius: 3px;
+    position: relative;
 }
 .discount-info-time-left{
     font-size: 16px;
@@ -3618,6 +3619,84 @@ a .btn-sort-reviews.active
 }
 .total{
     color: #6b778f;
+}
+
+.container-discount-info .add-favorite {
+    padding-left: 20px;
+    margin-top: 20px;
+    border-top: 1px solid #a7c9ff;
+    margin-left: 0;
+    color: #838da1;
+    font-size: 16px;
+    line-height: 50px;
+}
+.discount-btns-container {
+    margin: 0 -20px;
+    position: absolute;
+    bottom: 58px;
+    width: 100%;
+}
+
+.discount-post-block {
+    display: flex;
+    background-color: #fff;
+    margin-top: 20px;
+    border-radius: 3px;
+    box-shadow: 0px 2px 0px 0px #cdced0;
+    max-width: 940px;
+}
+.discount-post-block .cover {
+    min-width: 280px;
+    width: 280px;
+    display: block;
+    height: 150px;
+    background-position: center;
+    background-size: cover;
+}
+.discount-post-block .content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+}
+.discount-post-block .header-block {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+.discount-post-block .header-block a {
+    text-decoration: none;
+}
+.discount-post-block .header-text {
+    font-size: 20px;
+    color: #444;
+    overflow: hidden;
+}
+.discount-post-block .add-favorite:before {
+    margin: 0;
+}
+.discount-post-block .categories {
+    font-size: 14px;
+    color: #788399;
+    margin-bottom: 20px;
+}
+.discount-post-block .categories a {
+     color: #788399;
+     text-decoration: none;
+     line-height: 16px;
+}
+.discount-post-block .categories a:hover {
+    color: #444;
+    cursor: pointer;
+    text-decoration: underline;
+}
+.discount-post-block .address {
+    color: #788399;
+    font-size: 14px;
+    display: inline-flex;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 15px;
 }
 /*Страница скидки end*/
 /*страница новости */
