--- a/web/css/main-media.css
+++ b/web/css/main-media.css
@@ -25,7 +25,7 @@
     body:not(.open-search) .authorized .btn-search{
         height: auto;
         align-items: center;
-        padding: 21px 15px;
+        padding: 21px 10px;
     }
 }
 @media (max-height: 480px) {
@@ -53,6 +53,20 @@
 }
 
 @media (max-width: 800px) {
+
+    .header-menu-title{
+        display: none;
+    }
+
+    .header-menu-title.btn-select-city{
+        display: block;
+        margin-left: 0px;
+    }
+
+    .select-city{
+        display: none;
+    }
+
     .--with-message{
         width: 500px;
         left: calc(50% - 250px);
