--- a/web/css/min-1190px.css
+++ b/web/css/min-1190px.css
@@ -127,13 +127,13 @@
     .card-block-discount:nth-child(2n){
         margin-right: 0px;
     }
-    .container-photo{
+    .block-li-photo{
         width: calc((100% - 20px)/2 );
     }
-    .container-photo:nth-child(3n){
+    .block-li-photo:nth-child(3n){
         margin-right: 20px;
     }
-    .container-photo:nth-child(2n){
+    .block-li-photo:nth-child(2n){
         margin-right: 0px;
     }
     .container-discount-photos{
