--- a/web/css/min-540px.css
+++ b/web/css/min-540px.css
@@ -129,6 +129,7 @@
         left: 0px;
         width: 100%;
         margin-top: 0px;
+        z-index: 1;
     }
     .block-sort-reviews{
         flex-wrap: wrap;
