refactoring page photo

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6469,4 +6469,9 @@ form .field-input:first-child{
     border-radius: 3px;
     cursor: pointer;
 }
-
+.--href{
+    color: #4b98df;
+}
+.--href:hover{
+    text-decoration: none;
+}
