--- a/services/ipay/templates/transaction_start.xml
+++ b/services/ipay/templates/transaction_start.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="windows-1251"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ServiceProvider_Response>
     <TransactionStart>
         <ServiceProvider_TrxId>{{id}}</ServiceProvider_TrxId>
         <Info xml:space="preserve">
-            <InfoLine>Заказ {{id}}: </InfoLine>
-            <InfoLine>Пополнение счета</InfoLine>
+            <InfoLine>Р—Р°РєР°Р· {{id}}: </InfoLine>
+            <InfoLine>РџРѕРїРѕР»РЅРµРЅРёРµ СЃС‡РµС‚Р°</InfoLine>
         </Info>
     </TransactionStart>
 </ServiceProvider_Response>
