added promo links / fixed metatags, css and html

--- a/web/css/main-media.css
+++ b/web/css/main-media.css
@@ -95,5 +95,9 @@
         width: 100%;
         left: 0px;
     }
-
+}
+@media (max-width: 588px) {
+    .cards-block-discount{
+        margin-top: 10px;
+    }
 }
