--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3266,7 +3266,7 @@ a .btn-sort-reviews.active
 .cards-block-discount{
     display: flex;
     flex-wrap: wrap;
-    margin-top: 10px;
+    margin-top: -10px;
 }
 .btn-bb{
     padding-left: 20px;
@@ -6942,6 +6942,21 @@ form .field-input:first-child{
 }
 .busket-popup-message {
     top:calc(50% - 240px);
+}
+
+.--promo-link:hover
+{
+    color : #4b98df;
+    text-decoration : none;
+}
+.--promo-link
+{
+    color : #788399;
+}
+.--promo-block {
+    margin: -5px 0 15px 0;
+    text-align: center;
+    width: 100%;
 }
 /*end order discount*/
 
