--- a/web/css/main-media.css
+++ b/web/css/main-media.css
@@ -96,8 +96,8 @@
         left: 0px;
     }
 }
-@media (max-width: 588px) {
+/*@media (max-width: 588px) {
     .cards-block-discount{
         margin-top: 10px;
     }
-}
+}*/
