added float block / added recommended discount to discount page

--- a/web/css/min-1190px.css
+++ b/web/css/min-1190px.css
@@ -66,8 +66,7 @@
     }
     .block-description-card,
     .container-settings,
-    .container-add-place,
-    .discount-post-block{
+    .container-add-place {
         width: calc(100% - 355px);
     }
 
