--- a/web/css/lading/sale-of-business.css
+++ b/web/css/lading/sale-of-business.css
@@ -244,6 +244,9 @@
     position : absolute;
     bottom   : 30px;
 }
+.bottom-block-fill {
+    margin-top: 140px;
+}
 
 .block-price:nth-child(2)
 {
@@ -263,7 +266,8 @@
     font-size   : 16px;
 }
 
-.total-price span
+.total-price span,
+.attention-text
 {
     color       : #d04d43;
     font-family : PT_Sans;
@@ -357,4 +361,7 @@
         margin-right : 10px;
     }
 
+    .bottom-block-fill {
+        margin-top: 160px;
+    }
 }
