--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7041,30 +7041,28 @@ form .field-input:first-child{
     text-decoration: none;
 }
 
-
 .pagination
-{display : inline-block;padding-left : 0;margin : 20px 0;border-radius : 4px}
+{ display           : inline-flex;
+    padding-left    : 0;
+    margin          : 20px 0;
+    border-radius   : 4px;
+    width           : 100%;
+    justify-content : center;}
 
 .pagination > li
 {display : inline}
 
 .pagination > li > a, .pagination > li > span
-{position : relative;float : left;padding : 6px 12px;margin-left : -1px;line-height : 1.42857143;color : #337ab7;text-decoration : none;background-color : #fff;border : 1px solid #ddd}
-
-.pagination > li:first-child > a, .pagination > li:first-child > span
-{margin-left : 0;border-top-left-radius : 4px;border-bottom-left-radius : 4px}
-
-.pagination > li:last-child > a, .pagination > li:last-child > span
-{border-top-right-radius : 4px;border-bottom-right-radius : 4px}
+{position : relative;float : left;padding : 6px 12px;margin-left : -1px;line-height : 1.42857143;color : #788399;text-decoration : none;}
 
 .pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus
-{color : #23527c;background-color : #eee;border-color : #ddd}
+{color : #97a5c7;background-color : #e9eef7;}
 
 .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus
-{z-index : 2;color : #fff;cursor : default;background-color : #337ab7;border-color : #337ab7}
+{z-index : 2;color : #fff;cursor : default;background-color : #97a5c7;}
 
 .pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > .disabled > span:focus, .pagination > .disabled > a, .pagination > .disabled > a:hover, .pagination > .disabled > a:focus
-{color : #777;cursor : not-allowed;background-color : #fff;border-color : #ddd}
+{color : #777;cursor : not-allowed;background-color : #fff;}
 
 .pagination-lg > li > a, .pagination-lg > li > span
 {padding : 10px 16px;font-size : 18px}
